# cc4023-il

./: CHANGELOG.md  README.md  cc4023-il.cabal  temp1  temp2  tempNull0
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples_executable/: fl2  fl3  flappend  temp  temp3  tempNull1
runtime/: Makefile  heap.c  heap.h  secd  secd.c  secd.h
src/: Eval1.hs  Eval2.hs  Eval3.hs  Examples.hs  Fun.hs  SECD1.hs  SECD2.hs
