cabal-version:      2.4
name:               cc4023-il
version:            0.1.0.0
synopsis:           Example code for IL classes (CC4023)
description:        Interpreters and compilers for the FUN language
license:            MIT                                                   
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt
category:           education
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Fun Examples Eval1 Eval2 Eval3 SECD1 SECD2
    build-depends:    base ^>=4.16.4.0, containers, mtl
    hs-source-dirs:   src
    default-language: Haskell2010
